# RAP-interval-demo

./: .gitignore  BodyVisitor.rs  Cargo.toml  interval_analysis.rs  interval_test.rs  phi_mir_DefId(0:3 ~ test[ff03]::main).txt  ptr_test  ptr_test_simple  rust-toolchain.toml  ssa_mir_DefId(0:3 ~ test[ff03]::main).txt  test1  test7  test_copy_prop
passrunner_mir/: after_copy_prop_mir.txt  after_rename_mir.txt  before_copy_prop_mir.txt  norename_phi_mir.txt  origin_mir.txt
passrunner_mir copy/: after_rename_mir.txt  origin_mir.txt
src/: SSA.rs  lib.rs  main.rs
src/SSA/: PassRunner.rs  Replacer.rs  SSATransformer.rs  ssa.rs
src/domain/: ConstraintGraph.rs  domain.rs  range.rs
src/interval_analysis/: ssa.rs
ssa_mir/: mir_DefId(0:3 ~ test1[1230]::main).txt  phi_mir_DefId(0:3 ~ test1[1230]::main).txt  ssa_mir_DefId(0:3 ~ test1[7f36]::main).txt
test1_passrunner_mir/: phi_mir.txt  rename_mir.txt
tests/: interval_test.rs  output.hir  ptr_test.rs  ptr_test_simple.rs  test1.rs  test7.rs  test_copy_prop.rs
