[package]
name = "RAP-interval-demo"
version = "0.1.0"
authors = ["Coursant <24210240198@fudan.edu.cn>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
edition = "2021"

[dependencies]
num-traits = "0.2.19"
intervals = "2.1"

#lazy_static = "1.4"
rustc_version = "0.4.0"
cargo_metadata = "0.14.1"
snafu = "0.7.0"
chrono = "0.4.19"
serde_json = "1.0.72"
z3 = "0.12.1"
log = "0.4.14"
fern = {version = "0.6.2", features = ["colored"]}
wait-timeout = "0.2.0"
rustc-demangle = "0.1.21"
colorful = "0.2.1"
gcollections = "1.5.0"
rand = "0.9.0"
#stopwatch = "0.0.7"
[features]
backtraces = ["snafu/backtraces", "snafu/backtraces-impl-backtrace-crate"]

[build]
rustflags = ["-Awarnings"]

[package.metadata.rust-analyzer]
rustc_private = true
[profile.dev]
warnings = false

[profile.release]
warnings = false